<resources>
    <string name="app_name">RecyclerView</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="horizontal">Horizontal</string>
    <string name="reverse_layout">Reverse Layout</string>
    <string name="stack_from_end">Stack From End</string>

    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="divisible_by_ten">divisible by ten</string>

    <string name="staggered_grid_layout_manager">Staggered Grid Layout Manager</string>

    <string name="divider_item_decoration">Divider Item Decoration</string>
    <string name="change_line_color">Change Line Color</string>

    <string name="item_click">Item Click</string>

    <string name="notify">Notify**</string>
    <string name="add">add</string>

    <string name="header_footer">Header Footer</string>
    <string name="header">Header</string>
    <string name="footer">Footer</string>
</resources>
